--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bookshelf": "^0.9.2",
     "compression": "^1.6.2",
     "dotenv": "^2.0.0",
-    "express": "^4.13.4",
+    "express": "^4.16.2",
     "express-flash": "0.0.2",
     "express-session": "^1.2.1",
     "express-validator": "^2.20.4",
@@ -21,10 +21,12 @@
     "knex": "^0.10.0",
     "method-override": "^2.3.5",
     "morgan": "^1.7.0",
+    "multer": "^1.3.0",
     "mysql": "^2.10.2",
     "nodemailer": "^2.3.0",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
